--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@testing-library/jest-dom": "^5.1.1",
         "@testing-library/react": "^10.0.1",
         "@testing-library/user-event": "^10.0.0",
+        "@types/faker": "^4.1.10",
         "@types/jest": "^25.1.4",
         "@types/lodash": "^4.14.149",
         "@types/node": "^13.9.3",
@@ -30,15 +31,18 @@
         "@types/react-dom": "^16.9.5",
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.3",
+        "@types/redux-mock-store": "^1.0.2",
         "@types/styled-components": "^5.0.1",
         "babel-plugin-import": "^1.13.0",
         "customize-cra": "^0.9.1",
         "dayjs": "^1.8.18",
+        "faker": "^4.1.0",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
         "react-app-rewired": "^2.1.5",
         "react-is": "^16.13.1",
         "react-scripts": "3.4.1",
+        "redux-mock-store": "^1.5.4",
         "typescript": "~3.8.3"
     },
     "scripts": {
