--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "antd": "^4.0.4",
         "axios": "^0.19.2",
         "lodash": "^4.17.15",
+        "puppeteer": "^2.1.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
@@ -23,10 +24,13 @@
         "@testing-library/jest-dom": "^5.1.1",
         "@testing-library/react": "^10.0.1",
         "@testing-library/user-event": "^10.0.0",
-        "@types/faker": "^4.1.10",
+        "@types/enzyme": "^3.10.5",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/faker": "^4.1.11",
         "@types/jest": "^25.1.4",
         "@types/lodash": "^4.14.149",
-        "@types/node": "^13.9.3",
+        "@types/node": "^12.12.31",
+        "@types/puppeteer": "^2.0.1",
         "@types/react": "^16.9.25",
         "@types/react-dom": "^16.9.5",
         "@types/react-redux": "^7.1.7",
@@ -36,6 +40,8 @@
         "babel-plugin-import": "^1.13.0",
         "customize-cra": "^0.9.1",
         "dayjs": "^1.8.18",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "faker": "^4.1.0",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
