--- a/package.json
+++ b/package.json
@@ -8,24 +8,19 @@
         "antd": "^4.0.4",
         "axios": "^0.19.2",
         "lodash": "^4.17.15",
-        "puppeteer": "^2.1.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "react-use": "^13.27.0",
         "redux": "^4.0.5",
-        "redux-saga": "^1.1.3",
-        "styled-components": "^5.0.1",
-        "typesafe-actions": "^5.1.0"
+        "redux-saga": "^1.1.3"
     },
     "devDependencies": {
         "@testing-library/dom": "^7.1.0",
         "@testing-library/jest-dom": "^5.1.1",
         "@testing-library/react": "^10.0.1",
         "@testing-library/user-event": "^10.0.0",
-        "@types/enzyme": "^3.10.5",
-        "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/faker": "^4.1.11",
         "@types/jest": "^25.1.4",
         "@types/lodash": "^4.14.149",
@@ -40,15 +35,16 @@
         "babel-plugin-import": "^1.13.0",
         "customize-cra": "^0.9.1",
         "dayjs": "^1.8.18",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
         "faker": "^4.1.0",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
+        "puppeteer": "^2.1.1",
         "react-app-rewired": "^2.1.5",
         "react-is": "^16.13.1",
         "react-scripts": "3.4.1",
         "redux-mock-store": "^1.5.4",
+        "styled-components": "^5.0.1",
+        "typesafe-actions": "^5.1.0",
         "typescript": "~3.8.3"
     },
     "scripts": {
