--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,10 @@
             "error",
             "always-multiline"
         ],
+        "eol-last": [
+            "error",
+            "always"
+        ],
         "indent": [
             "error",
             4,
