Cập nhật browserslist

--- a/package.json
+++ b/package.json
@@ -57,12 +57,16 @@
         "production": [
             ">0.2%",
             "not dead",
-            "not op_mini all"
+            "not op_mini all",
+            "not ie 11",
+            "not ie_mob 11"
         ],
         "development": [
             "last 1 chrome version",
             "last 1 firefox version",
-            "last 1 safari version"
+            "last 1 safari version",
+            "last 1 samsung version",
+            "last 1 edge version"
         ]
     }
 }
