--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/faker": "^4.1.11",
         "@types/jest": "^25.1.4",
         "@types/lodash": "^4.14.149",
+        "@types/lodash-es": "^4.17.3",
         "@types/node": "^12.12.32",
         "@types/puppeteer": "^2.0.1",
         "@types/react": "^16.9.25",
@@ -32,11 +33,13 @@
         "@types/redux-mock-store": "^1.0.2",
         "@types/styled-components": "^5.0.1",
         "babel-plugin-import": "^1.13.0",
+        "babel-plugin-lodash": "^3.3.4",
         "customize-cra": "^0.9.1",
         "dayjs": "^1.8.18",
         "faker": "^4.1.0",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
+        "lodash-es": "^4.17.15",
         "react-app-rewired": "^2.1.5",
         "react-is": "^16.13.1",
         "react-scripts": "3.4.1",
